# mpc_controller

./: CMakeLists.txt
include/: common.h  kinematic.h  mpc_controller.h  referencePath.h
include/MPC_SPEED_STEEL/: kinematic_mpc.h  modelpredictivecontrol.h
log/: latest_list
src/: CMakeLists.txt  kinematic.cpp  main.cpp  mpc_controller.cpp  referencePath.cpp
src/MPC_SPEED_STEEL_CONTROL/: kinematic_mpc.cpp  main.cpp  modelpredictivecontrol.cpp
src/matlab_mpc/: main.cpp  matlabmpc.cpp  matlabmpc_backup.cpp
src/test_matplotlib/: testmatplotlib.cpp
